; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_pwd_getpwuid.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_pwd_getpwuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"uid\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @pwd_getpwuid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwd_getpwuid(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.passwd*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @nvlist_exists_number(i32* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @EINVAL, align 4
  store i32 %14, i32* %4, align 4
  br label %30

15:                                               ; preds = %3
  %16 = load i32*, i32** %6, align 8
  %17 = call i64 @nvlist_get_number(i32* %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i64 %17, i64* %9, align 8
  store i64 0, i64* @errno, align 8
  %18 = load i64, i64* %9, align 8
  %19 = call %struct.passwd* @getpwuid(i64 %18)
  store %struct.passwd* %19, %struct.passwd** %8, align 8
  %20 = load i64, i64* @errno, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %15
  %23 = load i64, i64* @errno, align 8
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %4, align 4
  br label %30

25:                                               ; preds = %15
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.passwd*, %struct.passwd** %8, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @pwd_pack(i32* %26, %struct.passwd* %27, i32* %28)
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %25, %22, %13
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @nvlist_exists_number(i32*, i8*) #1

declare dso_local i64 @nvlist_get_number(i32*, i8*) #1

declare dso_local %struct.passwd* @getpwuid(i64) #1

declare dso_local i32 @pwd_pack(i32*, %struct.passwd*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
